trunk/Archive2/10/b29f6248ca4cc7/output
main.cpp:4:8: error: expected constructor, destructor, or type conversion before '(' token
  printl("gvdfddfg0");
        ^
main.cpp:5:7: error: expected constructor, destructor, or type conversion before '(' token
  scanf(&x);
       ^
