trunk/Archive2/10/b29f6248ca4cc7/main.cpp
#include <iostream>
#include <string>
#include <vector>
 printl("gvdfddfg0");
 scanf(&x);